--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
@@ -5,8 +5,11 @@ losses:
     metric: l2
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
   
-  emotion_loss: 
+  emotion_loss:
+    # weight: 10.0 
     weight: 1.0
+    # weight: 0.1
+    # weight: 0.01
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     emo_feat_loss: mse_loss
     trainable: false 
