--- a/gdl_apps/TalkingHead/talkinghead_conf/model/renderer/fixed_view.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/renderer/fixed_view.yaml
@@ -8,7 +8,8 @@ image_size: 224
 topology_path: /ps/scratch/rdanecek/data/FLAME/geometry/head_template.obj
 n_light: 27
 
-project_landmarks: False
+# project_landmarks: False
+project_landmarks: True
 
 cam_names: 
   - front
