--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
@@ -1,23 +1,6 @@
 # @package learning
 losses:
-  vertex_loss:
-    weight: 1.
-    metric: l2
-    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
-  
-  emotion_loss:
-    # weight: 10.0 
-    weight: 1.0
-    # weight: 0.1
-    # weight: 0.01
-    network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
-    emo_feat_loss: mse_loss
-    trainable: false 
-    normalize_features: false 
-    target_method_image: emoca
-    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
-metrics: 
   lip_reading_loss:
     # weight: 10.0 
     weight: 1.0
@@ -27,6 +10,24 @@ metrics:
     trainable: false 
     normalize_features: false 
     target_method_image: spectre # trying to make lips behave as spectre
+    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+
+metrics: 
+  vertex_loss:
+    weight: 1.
+    metric: l2
+    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+
+  emotion_loss:
+    # weight: 10.0 
+    weight: 1.0
+    # weight: 0.1
+    # weight: 0.01
+    network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
+    emo_feat_loss: mse_loss
+    trainable: false 
+    normalize_features: false 
+    target_method_image: emoca # trying to make emotion behave as emoca
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
   exp_loss: 
