--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked.yaml
@@ -28,7 +28,11 @@ losses:
     target_method_image: spectre # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
+  expression_reg: 
+    weight: 0.0001
+
 metrics: 
+
   exp_loss: 
     weight: 1.
     metric: l2
