--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
@@ -17,6 +17,9 @@ losses:
     target_method_image: emoca
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
+  expression_reg: 
+    weight: 0.0001
+
 metrics: 
   lip_reading_loss:
     # weight: 10.0 
