--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_lip_masked.yaml
@@ -16,6 +16,9 @@ losses:
     target_method_image: spectre # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
+  expression_reg: 
+    weight: 0.0001
+
 metrics: 
   emotion_loss:
     # weight: 10.0 
