--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/emo_masked.yaml
@@ -2,9 +2,11 @@
 losses:  
   emotion_loss:
     # weight: 10.0 
-    weight: 1.0
+    # weight: 1.0
     # weight: 0.1
     # weight: 0.01
+    # weight: 0.001
+    weight: 0.0001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     emo_feat_loss: mse_loss
     trainable: false 
@@ -12,6 +14,9 @@ losses:
     target_method_image: emoca
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
+  expression_reg: 
+    weight: 0.0001
+    
 metrics: 
   vertex_loss:
     weight: 1.
@@ -29,8 +34,6 @@ metrics:
     target_method_image: spectre # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
-  expression_reg: 
-    weight: 0.0001
 
   exp_loss: 
     weight: 1.
