--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked.yaml
@@ -7,9 +7,11 @@ losses:
   
   emotion_loss:
     # weight: 10.0 
-    weight: 1.0
+    # weight: 1.0
     # weight: 0.1
     # weight: 0.01
+    # weight: 0.001
+    weight: 0.0001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     emo_feat_loss: mse_loss
     trainable: false 
@@ -19,9 +21,12 @@ losses:
 
   lip_reading_loss:
     # weight: 10.0 
-    weight: 1.0
+    # weight: 1.0
     # weight: 0.1
     # weight: 0.01
+    # weight: 0.001
+    # weight: 0.0001
+    weight: 0.00001
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
