--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/lip_masked.yaml
@@ -34,7 +34,8 @@ metrics:
     # weight: 0.001
     weight: 0.0001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
-    emo_feat_loss: mse_loss
+    # emo_feat_loss: mse_loss
+    emo_feat_loss: masked_mse_loss
     trainable: false 
     normalize_features: false 
     target_method_image: emoca # trying to make emotion behave as emoca
