--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -1,5 +1,10 @@
 # @package learning
-losses:  
+losses:
+  vertex_loss:
+    weight: 1.
+    metric: l2
+    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+  
   emotion_loss:
     # weight: 10.0 
     # weight: 1.0
@@ -12,29 +17,58 @@ losses:
     emo_feat_loss: masked_mse_loss
     trainable: false 
     normalize_features: false 
-    target_method_image: emoca
+    target_method_image: emoca # trying to make emotion behave as emoca
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
-
-  expression_reg: 
+  
+  emotion_loss_disentangled:
+    # weight: 10.0 
+    # weight: 1.0
+    # weight: 0.1
+    # weight: 0.01
+    # weight: 0.001
     weight: 0.0001
-
-metrics: 
-  vertex_loss:
-    weight: 1.
-    metric: l2
+    network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
+    # emo_feat_loss: mse_loss
+    emo_feat_loss: masked_mse_loss
+    trainable: false 
+    normalize_features: false 
+    target_method_image: emoca # trying to make emotion behave as emoca
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+    apply_on_disentangled: True
 
   lip_reading_loss:
     # weight: 10.0 
-    weight: 1.0
+    # weight: 1.0
     # weight: 0.1
     # weight: 0.01
+    # weight: 0.001
+    # weight: 0.0001
+    weight: 0.00001
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
     target_method_image: spectre # trying to make lips behave as spectre
     mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
+  lip_reading_loss_disentangled:
+    # weight: 10.0 
+    # weight: 1.0
+    # weight: 0.1
+    # weight: 0.01
+    # weight: 0.001
+    # weight: 0.0001
+    weight: 0.00001
+    # emo_feat_loss: mse_loss
+    trainable: false 
+    normalize_features: false 
+    target_method_image: spectre # trying to make lips behave as spectre
+    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
+    apply_on_disentangled: True
+
+  expression_reg: 
+    weight: 0.0001
+
+metrics: 
 
   exp_loss: 
     weight: 1.
