--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_lip_masked_exchange.yaml
@@ -11,7 +11,12 @@ losses:
     # weight: 0.1
     # weight: 0.01
     # weight: 0.001
-    weight: 0.0001
+    # weight: 0.0001
+    # weight: 0.00001
+    weight: 0.000001
+    # weight: 0.0000001
+    # weight: 0.00000001
+    # weight: 0.000000001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     # emo_feat_loss: mse_loss
     emo_feat_loss: masked_mse_loss
@@ -26,7 +31,12 @@ losses:
     # weight: 0.1
     # weight: 0.01
     # weight: 0.001
-    weight: 0.0001
+    # weight: 0.0001
+    # weight: 0.00001
+    weight: 0.000001
+    # weight: 0.0000001
+    # weight: 0.00000001
+    # weight: 0.000000001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     # emo_feat_loss: mse_loss
     emo_feat_loss: masked_mse_loss
@@ -43,7 +53,9 @@ losses:
     # weight: 0.01
     # weight: 0.001
     # weight: 0.0001
-    weight: 0.00001
+    # weight: 0.00001
+    weight: 0.000001 
+    # weight: 0.0000001 
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
@@ -57,7 +69,9 @@ losses:
     # weight: 0.01
     # weight: 0.001
     # weight: 0.0001
-    weight: 0.00001
+    # weight: 0.00001
+    weight: 0.000001 
+    # weight: 0.0000001 
     # emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
