--- a/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/flame_and_ser.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/flame_and_ser.yaml
@@ -13,7 +13,8 @@ preprocessors:
         type: flame
         flame: 
             flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
-            n_shape: 100 
+            # n_shape: 100 
+            n_shape: 300 
             # n_exp: 100
             n_exp: 50
             flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
